--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -2,21 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   position: relative;
   overflow: hidden;
-  padding:80px 0;
+  padding: 20px;
   min-height: 100vh;
   color: rgb(22, 81, 15);
   border-top:3px solid rgb(39, 118, 39);
-  padding-top:170px;
 }
 .title {
   font-size: 30px;
   border-bottom: 4px solid rgb(14, 14, 14);
   text-align: center;
-  padding: 0px 100px;
   color: rgba(57, 139, 42, 0.785);
+  width: 100%;
 }
 
 .subtitle{
