--- a/styles/Faq.module.css
+++ b/styles/Faq.module.css
@@ -8,10 +8,10 @@
     background-size: cover;
     background-attachment: fixed;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     display: flex;
     flex-direction: column;
-    padding: 9vw 10vw;
+    padding: 0px 20px;
     top: 30%;
     box-shadow: 2px 10px 35px 1px rgba(153, 153, 153, 0.3);
   }
@@ -38,8 +38,8 @@
     font-size: 30px;
     border-bottom: 4px solid green;
     text-align: center;
-    padding: 0px 100px;
     color: rgb(34, 33, 33);
+    width:100%;
   }
 
 
