--- a/styles/Testimonials.module.css
+++ b/styles/Testimonials.module.css
@@ -1,12 +1,12 @@
 .container {
   font-size: 18px;
   height: 100vh;
+  padding: 0 20px;
   position: relative;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
   background: rgba(255, 255, 255, 0.331);
   border-top: 3px solid rgb(110, 48, 35);
   border-bottom: 3px solid rgba(81, 89, 78, 0.879);
@@ -16,8 +16,8 @@
   font-size: 30px;
   border-bottom: 4px solid rgb(14, 14, 14);
   text-align: center;
-  padding: 0px 100px;
   color: rgba(15, 89, 15, 0.935);
+  width: 100%;
 }
 
 .hr{
@@ -34,6 +34,7 @@
   font-size: 34px;
   border-radius: 10px;
   color: rgb(22, 75, 35);
+  width: 100%;
 }
 
 
