--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -2,14 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
   position: relative;
   overflow: hidden;
-  padding: 20px;
+  padding: 0 20px;
   min-height: 100vh;
   color: rgb(22, 81, 15);
   border-top:3px solid rgb(39, 118, 39);
 }
+
+.wrapper{ 
+  width: 100%;
+}
+
 .title {
   font-size: 30px;
   border-bottom: 4px solid rgb(14, 14, 14);
@@ -28,6 +32,7 @@
   font-size: 34px;
   border-radius: 10px;
   color: rgb(22, 75, 35);
+  width: 100%;
 }
 
 .contactInfo {
