--- a/styles/Faq.module.css
+++ b/styles/Faq.module.css
@@ -1,6 +1,6 @@
 .container {
     font-size: 18px;
-    min-height:150vh;
+    min-height:130vh;
     height: auto;
     overflow: hidden;
     background-size: cover;
@@ -8,7 +8,6 @@
     background-size: cover;
     background-attachment: fixed;
     align-items: center;
-    justify-content: space-around;
     display: flex;
     flex-direction: column;
     padding: 0px 20px;
@@ -53,6 +52,7 @@
     font-size: 34px;
     border-radius: 10px;
     color: rgb(22, 75, 35);
+    width: 100%;
   }
   
   .wrapper {
