--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -6,11 +6,15 @@
   position: relative;
   border-bottom: 3px solid rgba(0, 0, 0, 0.799);
   background-image: url('https://i.ibb.co/J7rjnHj/lawn.jpg');
+  background-attachment: fixed;
+  background-size: cover;
   margin-top:173px;
 }
 
 .overlay{
   background: linear-gradient(rgba(224, 223, 223, 0.68) 25%, rgba(26, 26, 26, 0.737) 50%, rgba(31, 69, 44, 0.332) 75%);
+  width: 100%;
+  padding: 0 23px;
   
 }
 
