--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -14,6 +14,19 @@
 
 .cardS {
   flex: 1;
+  text-align: center;
+    background: #9b9b9b87;
+    padding: 10px;
+    border-radius: 34px;
+}
+
+.cardS p{
+  background: #ffffffd6;
+    padding: 10px;
+    line-height: 2;
+    color: #175817;
+    border-radius: 10px;
+    font-size: 22px;
 }
 
 .imgContainer {
