--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -97,9 +97,10 @@
   top: 38px;
   z-index: 999;
   text-transform: uppercase;
-  color: rgba(15, 15, 15, 0.746);
+  color: hsl(0deg 0% 100% / 75%);
   letter-spacing: 5px;
-  font-weight: 700;
+  font-weight: 200;
+  font-size: 19px;
   text-align: center;
 }
 
