--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -1,10 +1,10 @@
 .container {
-  padding: 0px 20px;
   justify-content: center;
   align-items: center;
   background:rgb(234, 231, 231);
   height: auto;
   border-radius: 10px;
+  padding: 1px 20px;
 }
 
 .title {
@@ -12,7 +12,7 @@
   border-bottom: 4px solid rgb(14, 14, 14);
   text-align: center;
   padding: 0px 100px;
-  color: rgba(255, 255, 255, 0.79);
+  color: rgba(65, 118, 65, 0.872);
 }
 
 
@@ -38,14 +38,14 @@
 
 
 .text{
-  font-size: 20px;
-  letter-spacing: .5px;
   font-weight: 400;
   text-indent: 40px;
   line-height: 3;
-  background-color: rgba(0, 0, 0, 0.69);
+  background-color: rgb(102 137 110 / 79%);
   border-radius: 13px;
+  color: white;
   padding: 10px;
+  letter-spacing: 2px;
 }
 
 .services {
