--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -68,10 +68,16 @@
   margin: 0px 5px;
   letter-spacing: 5px;
   text-indent: 3rem;
+  width: 100%;
+    background: #8b8b8b6b;
+    text-align: center;
+    border-radius: 30px 13px;
 }
 
 .brandName {
-  color: green;
+  color: #5f8951;
+    -webkit-text-stroke: .1px #bfbfbfcc;
+    font-size: 112px;
 }
 
 .desc {
