--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -66,7 +66,8 @@
   margin: 25px 0;
   cursor: pointer;
   border-radius: 40px 60px;
-  background: rgba(22, 75, 35, 0.939);
+  
+  background:rgb(51 100 69 / 72%);
   border: 3px solid rgba(42, 41, 41, 0.625);
   color: rgb(234, 231, 231);
   
