--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -41,6 +41,7 @@
   border-radius: 10px;
   padding: 10px;
   font-weight: 200;
+  margin: 100px;
 }
 
 .form {
@@ -50,12 +51,12 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  margin: auto;
 }
 
 .form div {
   flex-direction: row;
   width: 100%;
+  margin: auto;
 }
 
 .inputS {
