--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -71,8 +71,7 @@
   margin: 25px 0;
   cursor: pointer;
   border-radius: 40px 60px;
-  
-  background:rgb(51 100 69 / 72%);
+  background:rgb(76 93 76);
   border: 3px solid rgba(42, 41, 41, 0.625);
   color: rgb(234, 231, 231);
   
