--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -43,7 +43,7 @@
   font-weight: 400;
   text-indent: 40px;
   line-height: 3;
-  background-color: rgb(102 137 110 / 79%);
+  background-color: rgb(76 93 76);
   border-radius: 13px;
   color: white;
   padding: 10px;
