--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -18,7 +18,7 @@
   font-size: 30px;
   border-bottom: 4px solid rgb(14, 14, 14);
   text-align: center;
-  color: rgba(57, 139, 42, 0.785);
+  color: rgb(76 93 76);
   width: 100%;
 }
 
@@ -88,7 +88,7 @@
   padding: 15px 10px;
   border: none;
   border-radius: 10px;
-  background-color: rgb(0, 82, 0);
+  background-color: rgb(76 93 76);
   color: white;
   width: 100%;
   font-size: 16px;
