--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -111,7 +111,7 @@
 .desc h5{
   letter-spacing: 3px;
   background: #0c0c0cd1;
-  color: green;
+  color: rgb(230, 234, 230);
   font-size: 27px;
 }
 
