--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -34,7 +34,7 @@
   margin-right: 30px;
   font-size: 14px;
   /* font-weight: 300; */
-  color: rgb(20, 21, 20);
+  color: rgb(255, 255, 255);
   cursor: pointer;
   font-weight: 500;
   letter-spacing: 5px;
@@ -82,6 +82,14 @@
   margin-top: 173px;
 }
 
+.list{
+  background: #93a68d;
+  border: 2px solid #0000008c;
+  padding: 34px;
+  /* color: white; */
+  border-radius: 30px 80px;
+}
+
 @media screen and (max-width: 1200px) {
   .container {
     padding: 0px 20px;
@@ -107,4 +115,18 @@
   .menu:hover{
     color: green;
   }
+}
+
+@media screen and (max-width: 600px) {
+  .list{
+    background: none;
+    border: none;
+    /* color: white; */
+    border-radius: 30px 80px;
+  }
+
+  .list li{
+    color: white;
+  }
+
 }
