--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -56,6 +56,9 @@
 .form div {
   flex-direction: row;
   width: 100%;
+  background: white;
+  padding: 56px;
+  border-radius: 10px;
   margin: auto;
 }
 
