--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -16,7 +16,7 @@
 .overlay{
   background: linear-gradient(rgba(224, 223, 223, 0.68) 25%, rgba(26, 26, 26, 0.737) 50%, rgba(31, 69, 44, 0.332) 75%);
   width: 100%;
-  padding: 0 23px;
+  padding: 30px;
   
 }
 
