--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,5 +1,5 @@
 .container {
-  height: 173px;
+  height: 190px;
   background-color: rgb(234, 231, 231);
   color: rgb(22, 22, 21);
   display: flex;
@@ -52,7 +52,7 @@
 
 
 .listItem2 {
-  display: inline;
+  display: inline-block;
   margin-right: 30px;
   font-size: 14px;
   /* font-weight: 300; */
@@ -60,6 +60,10 @@
   cursor: pointer;
   font-weight: 500;
   letter-spacing: 5px;
+}
+
+.listItem2 a{
+  display: inline-block;
 }
 
 .hamburger {
