--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,12 +46,36 @@ a {
   margin: auto;
 }
 
+body{
+  overflow: hidden;
+}
 
 
 .Projects{
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+h2{
+  text-decoration: underline;
+  color: rgb(4, 48, 4);
+  margin: 10px 0;
+}
+.container {
+  margin: 150px auto;
+  padding: 30px 0;
+  
+  min-height: 100vh;
+  max-width: 1200px;
+  padding: 1rem;
+  background-color: rgba(255, 255, 255, 0.938);
+  border-radius: 10px;
+}
+
+p {
+  margin: 30px;
+  text-indent: 8px;
+  letter-spacing: 1px;
+}
 
 
 @media screen and (max-width: 480px) {
