--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,18 +63,31 @@ h2{
 .container {
   margin: 150px auto;
   padding: 30px 0;
-  
   min-height: 100vh;
-  max-width: 1200px;
+  max-width: 1100px;
   padding: 1rem;
   background-color: rgba(255, 255, 255, 0.938);
   border-radius: 10px;
+  letter-spacing: 1px;
+  line-height: 3;
+  display:flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.heading{
+  color: green;
+  text-decoration: underline;
+}
+
+h1{
+  text-align: center;
 }
 
 p {
   margin: 30px;
-  text-indent: 8px;
-  letter-spacing: 1px;
+  text-indent: 30px;
+
 }
 
 
